<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbCorpName" />

    <EditText
        android:id="@+id/txtCorpName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbCorpAddress" />

    <EditText
        android:id="@+id/txtCorpAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbCheckRecord" />

    <EditText
        android:id="@+id/txtCheckRecord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSclawbook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSclawbook" />

    <Button
        android:id="@+id/btnPrint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPrint" />

</LinearLayout>